--- a/src/TodoSearch/TodoSearch.css
+++ b/src/TodoSearch/TodoSearch.css
@@ -1,26 +1,23 @@
 .TodoSearch {
-  background: whitesmoke;
-  border-radius: 4px;
-  border: 2.5px solid #202329;
-  margin: 0 24px;
-  height: 64px;
-  width: calc(100% - 62px);
-  font-size: 24px;
+  background: transparent;
+  border-radius: 32px;
+  border: 2.5px solid var(--todo-item);
+  margin-bottom: 32px;
+  height: 48px;
+  padding: 0;
+  width: 98%;
   text-align: center;
-  font-family: 'Montserrat';
-  font-weight: 400;
-  color: black;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.25);
 }
 
 .TodoSearch::placeholder {
   color: gray;
   font-family: 'Montserrat';
-  font-weight: 400;
+  font-weight: light;
+  font-size:large;
 }
 
 .TodoSearch:focus {
-  outline: none;
-  
-  border-color: var(--main-color);
+  outline-offset: 1px;
+  outline-color: var(--todo-item)
 }
