--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -1,21 +1,21 @@
 .CreateTodoButton {
-  background-color: var(--main-color);
-  box-shadow: 0px 5px 25px rgba(176, 196, 177, .5);
+  background-color: var(--text-color);
+  box-shadow: 0px 5px 25px rgba(61, 56, 65, 0.347);
   border: none;
   border-radius: 100%;
   cursor: pointer;
-  font-size: 50px;
+  font-size: 60px;
   position: fixed;
   bottom: 40px;
   right: 40px;
-  font-weight: bold;
-  color: white;
+  font-weight: 600;
+  color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 64px;
   width: 64px;
-  z-index: 1;
+  z-index: 0;
 
 
   transform: rotate(0);
