--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -1,23 +1,26 @@
 .TodoItem {
-  background-color: whitesmoke;
+  background-color: var(--todo-item);
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 24px;
-  box-shadow: 0px 5px 50px rgba(237, 175, 184, 0.5);
-  border-radius: 4px;
+  margin-top: 26px;
+  border-radius: 18px;
+
+
 }
 
 .TodoItem-p {
   margin: 24px 0 24px 24px;
-  padding-left: 24px;
+  padding-left: 30px;
   width: calc(100% - 120px);
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 400;
+  font-size: larger;
+  line-height: 28px;
+  font-weight: 500;
+  color: #FFFFFF;
   
 }
 .TodoItem-p--complete {
-  text-decoration: line-through;
+  text-decoration: line-through #a6f2e8;
+
 }
