--- a/src/TodoForm/TodoForm.css
+++ b/src/TodoForm/TodoForm.css
@@ -7,40 +7,44 @@ form {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 18px;
 
 }
 
 label {
+    font-family: 'Montserrat';
     text-align: center;
     font-weight: bold;
-    font-size: 20px;
-    color: #1E1E1F;
+    font-size:x-large;
+    color: #605870;
     margin-bottom: 26px;
 }
 
 textarea {
     background-color: #ffffff;
-    border: 2px solid #605870;
-    border-radius: 2px;
-    box-shadow: 0px 5px rgba(32, 35, 41, 0.25);
+    border: .5px, gray;
+    border-radius: 12px;
+    box-shadow: 0px 5px rgba(128, 128, 128, 0.25);
     color: #605870;
     font-size: 20px;
     text-align: center;
     padding: 12px;
-    height: 96px;
+    height: 60px;
     width: calc(100% - 25px);
 
 }
 
 textarea ::placeholder {
-  color: #A5A5A5;
+  text-align: center;
+  color: gray;
   font-family: "Montserrat";
-  font-weight: 400;
+  font-weight: 200;
 
 }
 
 textarea :focus {
     outline-color: #605870;
+    outline-width: .5px;
 
 }
 
@@ -72,13 +76,19 @@ textarea :focus {
 .TodoForm-button--add{
     background-color: transparent;
     color: #605870;
-    font-size: larger;
+    font-size: x-large;
     font-weight: 600;
+    align-items: center;
+    justify-content: center;
+
+
    
 }
 
 .TodoForm-button--cancel{
     background: transparent;
-
-
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
+    font-weight: 200;
 }
