--- a/src/TodoIcon/TodoIcon.css
+++ b/src/TodoIcon/TodoIcon.css
@@ -37,15 +37,16 @@
 
 .delete-icon {
   padding-right: 12px;
-  height: 70%;
-  width: 6%;
+  height: 42px;
+  width: 32px
 }
 
 .check-icon {
  padding-left: 12px;
- padding-right: 6px;
- height: 70%;
- width: 7%;
+ padding-right: 32px;
+ margin-right: 12px;
+ height: 46.3px;
+ width: 46.3px;
 
  
 }
