--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,5 +1,10 @@
 .TodoList {
-  margin: 0;
+  margin: 0 32px;
   padding: 0 0 56px 0;
   list-style: none;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  display: flex;
+  flex-direction: column;
 }
