--- a/src/ChangeAlert/ChangeAlert.css
+++ b/src/ChangeAlert/ChangeAlert.css
@@ -2,16 +2,34 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 50px;
+    position: fixed;
+    top:0;
+    bottom: 0;
+    right:0;
+    left:0;
+    background-color: rgba(108, 99, 126, .3);
+    z-index: 2;
+    
 }
 
 
+.update-modal{
+    position: fixed;
+    width: 30%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+
+
+
+}
 
 .update-alert{
-    color: #605870;
-    font-weight: 600;
-    font-size: normal;
+    color: #392f4e;
+    font-weight: bolder;
+    font-size: larger;
     font-family: 'Montserrat';
     position: absolute;
     margin-left: 0;
