--- a/src/TodoCounter/TodoCounter.css
+++ b/src/TodoCounter/TodoCounter.css
@@ -1,5 +1,5 @@
 .TodoCounter {
-  background: linear-gradient(var(--linear-gradient1), 70%, var(--linear-gradient2));;
+  background: transparent;
   font-size: 24px;
   text-align: center;
   align-items: center;
